[package]
name = "crawler"
version = "0.1.0"
authors = ["Tyler Wickline <twick00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-std= { version="1.5.0", feature="unstable" }
surf="1.0.3"
html5ever = "0.25.1"
url="2.1.1"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]
